lab-19-kubernetes-network-policies-website-blocking/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-web-app
spec:
  podSelector:
    matchLabels:
      app: web-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: allowed
